[package]
name = "dnat"
version = "0.2.0"
authors = ["arloor <admin@arloor.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log_x = { git = "https://github.com/arloor/rust_http_proxy.git" }
log = "0.4"
