[package]
name = "nat-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "nat"
path = "src/main.rs"

[dependencies]
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap.workspace = true
toml.workspace = true
nat-common = { path = "../nat-common" }
