[package]
name = "nat-console"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "nat-console"
path = "src/main.rs"

[dependencies]
# 基础库
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap.workspace = true
toml.workspace = true

# 共享库
nat-common = { path = "../nat-common" }

# Web 框架
axum.workspace = true
axum-bootstrap.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# 认证相关
jsonwebtoken.workspace = true
bcrypt.workspace = true

# TLS/加密
rustls = { version = "0.23", features = ["aws_lc_rs"] }

# 其他
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
time = { version = "0.3", features = ["macros"] }
